--- a/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_QLSTM_fbank_combine.cfg
+++ b/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_QLSTM_fbank_combine.cfg
@@ -5,8 +5,8 @@ cfg_proto_chunk = proto/global_chunk.proto
 [exp]
 cmd =
 run_nn_script = run_nn
-out_folder = exp/combine_2300
-seed = 2300
+out_folder = exp/beam
+seed = 2234
 use_cuda = True
 multi_gpu = False
 save_gpumem = False
@@ -134,6 +134,7 @@ lab = lab_name=lab_cd
         lab_graph=/opt/kaldi/egs/timit/s5_beam/exp/tri3/graph
 n_chunks = 1
 
+
 [data_use]
 train_with = TIMIT_tr
 valid_with = TIMIT_dev
@@ -149,19 +150,24 @@ batch_size_valid = 8
 max_seq_length_valid = 500
 
 [architecture1]
-arch_name = LSTM_cudnn_layers
-arch_proto = proto/LSTM_cudnn.proto
-arch_library = neural_networks
-arch_class = LSTM_cudnn
+arch_name = QLSTM
+arch_proto = proto/QLSTM.proto
+arch_library = q_neural_networks
+arch_class = QLSTM
 arch_pretrain_file = none
 arch_freeze = False
 arch_seq_model = True
-hidden_size=215
-num_layers=4
-bias=True
-batch_first=False
-dropout=0.2
-bidirectional=True
+lstm_lay = 512,512,512,512
+lstm_drop = 0.2,0.2,0.2,0.2
+lstm_bidir = True
+lstm_act = tanh,tanh,tanh,tanh
+quaternion_init=quaternion
+autograd=True
+proj_layer=False
+proj_dim=0
+proj_norm=False
+proj_act=0
+quaternion_norm=False
 arch_lr = 0.0016
 arch_halving_factor = 0.5
 arch_improvement_threshold = 0.001
@@ -224,11 +230,10 @@ opt_weight_decay = 0.0
 
 [model]
 model_proto = proto/model.proto
-
 model = conc1=concatenate(la2,la3)
 	conc2=concatenate(conc1,la4)
 	conc3=concatenate(conc2,la5)
-	out_dnn1=compute(LSTM_cudnn_layers,conc3)
+	out_dnn1=compute(QLSTM,conc3)
 	out_dnn2=compute(MLP_layers,out_dnn1)
 	out_dnn3=compute(MLP_layers2,out_dnn1)
 	loss_mono=cost_nll(out_dnn3,lab_mono)
