add sbatch script

--- a/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_LSTM_fbank_beam_false_2.cfg
+++ b/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_LSTM_fbank_beam_false_2.cfg
@@ -5,8 +5,8 @@ cfg_proto_chunk = proto/global_chunk.proto
 [exp]
 cmd = 
 run_nn_script = run_nn
-out_folder = exp/LSTM_beam_512_2300
-seed = 2300
+out_folder = exp/LSTM_beam_512_false_5000
+seed = 5000
 use_cuda = True
 multi_gpu = False
 save_gpumem = False
@@ -108,7 +108,7 @@ lstm_drop = 0.2,0.2,0.2,0.2
 lstm_use_laynorm_inp = False
 lstm_use_batchnorm_inp = False
 lstm_use_laynorm = False,False,False,False
-lstm_use_batchnorm = True,True,True,True
+lstm_use_batchnorm = False,False,False,False
 lstm_bidir = True
 lstm_act = tanh,tanh,tanh,tanh
 lstm_orthinit = True
