--- a/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_QLSTM_fbank_combine.cfg
+++ b/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_QLSTM_fbank_combine.cfg
@@ -5,7 +5,7 @@ cfg_proto_chunk = proto/global_chunk.proto
 [exp]
 cmd =
 run_nn_script = run_nn
-out_folder = exp/beam
+out_folder = exp/QLSTM_cudnn_combine
 seed = 2234
 use_cuda = True
 multi_gpu = False
@@ -162,7 +162,7 @@ lstm_drop = 0.2,0.2,0.2,0.2
 lstm_bidir = True
 lstm_act = tanh,tanh,tanh,tanh
 quaternion_init=quaternion
-autograd=True
+autograd=False
 proj_layer=False
 proj_dim=0
 proj_norm=False
