--- a/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_LSTM_cudnn_fbank_beam_false.cfg
+++ b/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_LSTM_cudnn_fbank_beam_false.cfg
@@ -5,7 +5,7 @@ cfg_proto_chunk = proto/global_chunk.proto
 [exp]
 cmd = 
 run_nn_script = run_nn
-out_folder = exp/LSTM_beam_512_2300
+out_folder = exp/LSTM_cudnn_beam_512_false_2300
 seed = 2300
 use_cuda = True
 multi_gpu = False
@@ -97,21 +97,18 @@ max_seq_length_valid = 1000
 
 [architecture1]
 arch_name = LSTM_cudnn_layers
-arch_proto = proto/LSTM.proto
+arch_proto = proto/LSTM_cudnn.proto
 arch_library = neural_networks
-arch_class = LSTM
+arch_class = LSTM_cudnn
 arch_pretrain_file = none
 arch_freeze = False
 arch_seq_model = True
-lstm_lay = 512,512,512,512
-lstm_drop = 0.2,0.2,0.2,0.2
-lstm_use_laynorm_inp = False
-lstm_use_batchnorm_inp = False
-lstm_use_laynorm = False,False,False,False
-lstm_use_batchnorm = True,True,True,True
-lstm_bidir = True
-lstm_act = tanh,tanh,tanh,tanh
-lstm_orthinit = True
+hidden_size=512
+num_layers=4
+bias=True
+batch_first=False
+dropout=0.2
+bidirectional=True
 arch_lr = 0.0016
 arch_halving_factor = 0.5
 arch_improvement_threshold = 0.001
