--- a/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_LSTM_fbank_combine.cfg
+++ b/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_LSTM_fbank_combine.cfg
@@ -5,7 +5,7 @@ cfg_proto_chunk = proto/global_chunk.proto
 [exp]
 cmd =
 run_nn_script = run_nn
-out_folder = exp/combine_2300
+out_folder = exp/LSTM_cudnn_combine
 seed = 2300
 use_cuda = True
 multi_gpu = False
