--- a/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_LSTM_fbank_combine_false.cfg
+++ b/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_LSTM_fbank_combine_false.cfg
@@ -3,10 +3,10 @@ cfg_proto = proto/global.proto
 cfg_proto_chunk = proto/global_chunk.proto
 
 [exp]
-cmd = 
+cmd =
 run_nn_script = run_nn
-out_folder = exp/combine_4000
-seed = 4000
+out_folder = exp/LSTM_cudnn_combine_batchfalse_6000
+seed = 6000
 use_cuda = True
 multi_gpu = False
 save_gpumem = False
@@ -141,30 +141,27 @@ forward_with = TIMIT_test
 
 [batches]
 batch_size_train = 8
-max_seq_length_train = 1000
+max_seq_length_train = 500
 increase_seq_length_train = True
 start_seq_len_train = 100
 multply_factor_seq_len_train = 2
 batch_size_valid = 8
-max_seq_length_valid = 1000
+max_seq_length_valid = 500
 
 [architecture1]
 arch_name = LSTM_cudnn_layers
-arch_proto = proto/LSTM.proto
+arch_proto = proto/LSTM_cudnn.proto
 arch_library = neural_networks
-arch_class = LSTM
+arch_class = LSTM_cudnn
 arch_pretrain_file = none
 arch_freeze = False
 arch_seq_model = True
-lstm_lay = 550,550,550,550
-lstm_drop = 0.2,0.2,0.2,0.2
-lstm_use_laynorm_inp = False
-lstm_use_batchnorm_inp = False
-lstm_use_laynorm = False,False,False,False
-lstm_use_batchnorm = True,True,True,True
-lstm_bidir = True
-lstm_act = tanh,tanh,tanh,tanh
-lstm_orthinit = True
+hidden_size=215
+num_layers=4
+bias=True
+batch_first=False
+dropout=0.2
+bidirectional=True
 arch_lr = 0.0016
 arch_halving_factor = 0.5
 arch_improvement_threshold = 0.001
@@ -262,4 +259,3 @@ skip_scoring = false
 scoring_script = local/score.sh
 scoring_opts = "--min-lmwt 1 --max-lmwt 10"
 norm_vars = False
-
