--- a/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_LSTM_cudnn_fbank_beam_extra.cfg
+++ b/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_LSTM_cudnn_fbank_beam_extra.cfg
@@ -5,12 +5,12 @@ cfg_proto_chunk = proto/global_chunk.proto
 [exp]
 cmd = 
 run_nn_script = run_nn
-out_folder = exp/LSTM_beam_512_4500
-seed = 4500
+out_folder = exp/LSTM_cudnn_beam_extra_48
+seed = 2300
 use_cuda = True
 multi_gpu = False
 save_gpumem = False
-n_epochs_tr = 24
+n_epochs_tr = 48
 
 [dataset1]
 data_name = TIMIT_tr
@@ -96,22 +96,20 @@ batch_size_valid = 8
 max_seq_length_valid = 1000
 
 [architecture1]
-arch_name = LSTM_cudnn_layers
-arch_proto = proto/LSTM.proto
+arch_name = MLP_layers
+arch_proto = proto/MLP.proto
 arch_library = neural_networks
-arch_class = LSTM
+arch_class = MLP
 arch_pretrain_file = none
 arch_freeze = False
-arch_seq_model = True
-lstm_lay = 512,512,512,512
-lstm_drop = 0.2,0.2,0.2,0.2
-lstm_use_laynorm_inp = False
-lstm_use_batchnorm_inp = False
-lstm_use_laynorm = False,False,False,False
-lstm_use_batchnorm = True,True,True,True
-lstm_bidir = True
-lstm_act = tanh,tanh,tanh,tanh
-lstm_orthinit = True
+arch_seq_model = False
+dnn_lay = 512
+dnn_drop = 0.0
+dnn_use_laynorm_inp = False
+dnn_use_batchnorm_inp = False
+dnn_use_batchnorm = False
+dnn_use_laynorm = False
+dnn_act = softmax
 arch_lr = 0.0016
 arch_halving_factor = 0.5
 arch_improvement_threshold = 0.001
@@ -123,7 +121,31 @@ opt_centered = False
 opt_weight_decay = 0.0
 
 [architecture2]
-arch_name = MLP_layers
+arch_name = LSTM_cudnn_layers
+arch_proto = proto/LSTM_cudnn.proto
+arch_library = neural_networks
+arch_class = LSTM_cudnn
+arch_pretrain_file = none
+arch_freeze = False
+arch_seq_model = True
+hidden_size=512
+num_layers=4
+bias=True
+batch_first=True
+dropout=0.2
+bidirectional=True
+arch_lr = 0.0016
+arch_halving_factor = 0.5
+arch_improvement_threshold = 0.001
+arch_opt = rmsprop
+opt_momentum = 0.0
+opt_alpha = 0.95
+opt_eps = 1e-8
+opt_centered = False
+opt_weight_decay = 0.0
+
+[architecture3]
+arch_name = MLP_layers2
 arch_proto = proto/MLP.proto
 arch_library = neural_networks
 arch_class = MLP
@@ -147,8 +169,8 @@ opt_eps = 1e-8
 opt_centered = False
 opt_weight_decay = 0.0
 
-[architecture3]
-arch_name = MLP_layers2
+[architecture4]
+arch_name = MLP_layers3
 arch_proto = proto/MLP.proto
 arch_library = neural_networks
 arch_class = MLP
@@ -174,17 +196,18 @@ opt_weight_decay = 0.0
 
 [model]
 model_proto = proto/model.proto
-model = out_dnn1=compute(LSTM_cudnn_layers,fbank)
-	out_dnn2=compute(MLP_layers,out_dnn1)
-	out_dnn3=compute(MLP_layers2,out_dnn1)
-	loss_mono=cost_nll(out_dnn3,lab_mono)
+model = out_dnn1=compute(MLP_layers,fbank)
+	out_dnn2=compute(LSTM_cudnn_layers,out_dnn1)
+	out_dnn3=compute(MLP_layers2,out_dnn2)
+	out_dnn4=compute(MLP_layers3,out_dnn2)
+	loss_mono=cost_nll(out_dnn4,lab_mono)
 	loss_mono_w=mult_constant(loss_mono,1.0)
-	loss_cd=cost_nll(out_dnn2,lab_cd)
+	loss_cd=cost_nll(out_dnn3,lab_cd)
 	loss_final=sum(loss_cd,loss_mono_w)
-	err_final=cost_err(out_dnn2,lab_cd)
+	err_final=cost_err(out_dnn3,lab_cd)
 
 [forward]
-forward_out = out_dnn2
+forward_out = out_dnn3
 normalize_posteriors = True
 normalize_with_counts_from = lab_cd
 save_out_file = False
