--- a/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_LSTM_cudnn_fbank_beam_extra.cfg
+++ b/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_LSTM_cudnn_fbank_beam_extra.cfg
@@ -5,12 +5,12 @@ cfg_proto_chunk = proto/global_chunk.proto
 [exp]
 cmd = 
 run_nn_script = run_nn
-out_folder = exp/LSTM_cudnn_beam_extra_48
-seed = 2300
+out_folder = exp/LSTM_cudnn_beam_extra_leakyrelu_4500
+seed = 4500
 use_cuda = True
 multi_gpu = False
 save_gpumem = False
-n_epochs_tr = 48
+n_epochs_tr = 24
 
 [dataset1]
 data_name = TIMIT_tr
@@ -109,7 +109,7 @@ dnn_use_laynorm_inp = False
 dnn_use_batchnorm_inp = False
 dnn_use_batchnorm = False
 dnn_use_laynorm = False
-dnn_act = softmax
+dnn_act = leaky_relu
 arch_lr = 0.0016
 arch_halving_factor = 0.5
 arch_improvement_threshold = 0.001
