--- a/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_LSTM_cudnn_fbank_combine_extra_leakyrelu_1.cfg
+++ b/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_LSTM_cudnn_fbank_combine_extra_leakyrelu_1.cfg
@@ -5,8 +5,8 @@ cfg_proto_chunk = proto/global_chunk.proto
 [exp]
 cmd =
 run_nn_script = run_nn
-out_folder = exp/QLSTM_cudnn_combine
-seed = 2234
+out_folder = exp/LSTM_cudnn_combine_extra_leakyrelu_256_6000
+seed = 6000
 use_cuda = True
 multi_gpu = False
 save_gpumem = False
@@ -39,18 +39,18 @@ fea = fea_name=la2
         cw_right=0
 
 lab = lab_name=lab_cd
-        lab_folder=/opt/kaldi/egs/timit/s5_beam/exp/tri3_ali_train
+        lab_folder=/opt/kaldi/egs/timit/s5/exp/tri3_ali
         lab_opts=ali-to-pdf
         lab_count_file=auto
-        lab_data_folder=/opt/kaldi/egs/timit/s5_beam/data/train/
-        lab_graph=/opt/kaldi/egs/timit/s5_beam/exp/tri3/graph
+        lab_data_folder=/opt/kaldi/egs/timit/s5/data/train/
+        lab_graph=/opt/kaldi/egs/timit/s5/exp/tri3/graph
 
         lab_name=lab_mono
-        lab_folder=/opt/kaldi/egs/timit/s5_beam/exp/tri3_ali_train
+        lab_folder=/opt/kaldi/egs/timit/s5/exp/tri3_ali
         lab_opts=ali-to-phones --per-frame=true
         lab_count_file=none
-        lab_data_folder=/opt/kaldi/egs/timit/s5_beam/data/train/
-        lab_graph=/opt/kaldi/egs/timit/s5_beam/exp/tri3/graph
+        lab_data_folder=/opt/kaldi/egs/timit/s5/data/train/
+        lab_graph=/opt/kaldi/egs/timit/s5/exp/tri3/graph
 n_chunks = 5
 [dataset2]
 data_name = TIMIT_dev
@@ -79,18 +79,18 @@ fea = fea_name=la2
         cw_right=0
 
 lab = lab_name=lab_cd
-        lab_folder=/opt/kaldi/egs/timit/s5_beam/exp/tri3_ali_dev
+        lab_folder=/opt/kaldi/egs/timit/s5/exp/tri3_ali_dev
         lab_opts=ali-to-pdf
         lab_count_file=auto
-        lab_data_folder=/opt/kaldi/egs/timit/s5_beam/data/dev/
-        lab_graph=/opt/kaldi/egs/timit/s5_beam/exp/tri3/graph
+        lab_data_folder=/opt/kaldi/egs/timit/s5/data/dev/
+        lab_graph=/opt/kaldi/egs/timit/s5/exp/tri3/graph
 
         lab_name=lab_mono
-        lab_folder=/opt/kaldi/egs/timit/s5_beam/exp/tri3_ali_dev
+        lab_folder=/opt/kaldi/egs/timit/s5/exp/tri3_ali_dev
         lab_opts=ali-to-phones --per-frame=true
         lab_count_file=none
-        lab_data_folder=/opt/kaldi/egs/timit/s5_beam/data/dev/
-        lab_graph=/opt/kaldi/egs/timit/s5_beam/exp/tri3/graph
+        lab_data_folder=/opt/kaldi/egs/timit/s5/data/dev/
+        lab_graph=/opt/kaldi/egs/timit/s5/exp/tri3/graph
 n_chunks = 1
 
 [dataset3]
@@ -120,20 +120,19 @@ fea = fea_name=la2
         cw_right=0
 
 lab = lab_name=lab_cd
-        lab_folder=/opt/kaldi/egs/timit/s5_beam/exp/tri3_ali_test
+        lab_folder=/opt/kaldi/egs/timit/s5/exp/tri3_ali_test
         lab_opts=ali-to-pdf
         lab_count_file=auto
-        lab_data_folder=/opt/kaldi/egs/timit/s5_beam/data/test/
-        lab_graph=/opt/kaldi/egs/timit/s5_beam/exp/tri3/graph
+        lab_data_folder=/opt/kaldi/egs/timit/s5/data/test/
+        lab_graph=/opt/kaldi/egs/timit/s5/exp/tri3/graph
 
         lab_name=lab_mono
-        lab_folder=/opt/kaldi/egs/timit/s5_beam/exp/tri3_ali_test
+        lab_folder=/opt/kaldi/egs/timit/s5/exp/tri3_ali_test
         lab_opts=ali-to-phones --per-frame=true
         lab_count_file=none
-        lab_data_folder=/opt/kaldi/egs/timit/s5_beam/data/test/
-        lab_graph=/opt/kaldi/egs/timit/s5_beam/exp/tri3/graph
+        lab_data_folder=/opt/kaldi/egs/timit/s5/data/test/
+        lab_graph=/opt/kaldi/egs/timit/s5/exp/tri3/graph
 n_chunks = 1
-
 
 [data_use]
 train_with = TIMIT_tr
@@ -150,24 +149,20 @@ batch_size_valid = 8
 max_seq_length_valid = 500
 
 [architecture1]
-arch_name = QLSTM
-arch_proto = proto/QLSTM.proto
-arch_library = q_neural_networks
-arch_class = QLSTM
+arch_name = MLP_layers
+arch_proto = proto/MLP.proto
+arch_library = neural_networks
+arch_class = MLP
 arch_pretrain_file = none
 arch_freeze = False
-arch_seq_model = True
-lstm_lay = 512,512,512,512
-lstm_drop = 0.2,0.2,0.2,0.2
-lstm_bidir = True
-lstm_act = tanh,tanh,tanh,tanh
-quaternion_init=quaternion
-autograd=False
-proj_layer=False
-proj_dim=0
-proj_norm=False
-proj_act=0
-quaternion_norm=False
+arch_seq_model = False
+dnn_lay = 256
+dnn_drop = 0.0
+dnn_use_laynorm_inp = False
+dnn_use_batchnorm_inp = False
+dnn_use_batchnorm = False
+dnn_use_laynorm = False
+dnn_act = leaky_relu
 arch_lr = 0.0016
 arch_halving_factor = 0.5
 arch_improvement_threshold = 0.001
@@ -179,7 +174,31 @@ opt_centered = False
 opt_weight_decay = 0.0
 
 [architecture2]
-arch_name = MLP_layers
+arch_name = LSTM_cudnn_layers
+arch_proto = proto/LSTM_cudnn.proto
+arch_library = neural_networks
+arch_class = LSTM_cudnn
+arch_pretrain_file = none
+arch_freeze = False
+arch_seq_model = True
+hidden_size=512
+num_layers=4
+bias=True
+batch_first=True
+dropout=0.2
+bidirectional=True
+arch_lr = 0.0016
+arch_halving_factor = 0.5
+arch_improvement_threshold = 0.001
+arch_opt = rmsprop
+opt_momentum = 0.0
+opt_alpha = 0.95
+opt_eps = 1e-8
+opt_centered = False
+opt_weight_decay = 0.0
+
+[architecture3]
+arch_name = MLP_layers2
 arch_proto = proto/MLP.proto
 arch_library = neural_networks
 arch_class = MLP
@@ -203,8 +222,8 @@ opt_eps = 1e-8
 opt_centered = False
 opt_weight_decay = 0.0
 
-[architecture3]
-arch_name = MLP_layers2
+[architecture4]
+arch_name = MLP_layers3
 arch_proto = proto/MLP.proto
 arch_library = neural_networks
 arch_class = MLP
@@ -230,20 +249,22 @@ opt_weight_decay = 0.0
 
 [model]
 model_proto = proto/model.proto
+
 model = conc1=concatenate(la2,la3)
 	conc2=concatenate(conc1,la4)
 	conc3=concatenate(conc2,la5)
-	out_dnn1=compute(QLSTM,conc3)
-	out_dnn2=compute(MLP_layers,out_dnn1)
-	out_dnn3=compute(MLP_layers2,out_dnn1)
-	loss_mono=cost_nll(out_dnn3,lab_mono)
+	out_dnn1=compute(MLP_layers,conc3)
+	out_dnn2=compute(LSTM_cudnn_layers,out_dnn1)
+	out_dnn3=compute(MLP_layers2,out_dnn2)
+	out_dnn4=compute(MLP_layers3,out_dnn2)
+	loss_mono=cost_nll(out_dnn4,lab_mono)
 	loss_mono_w=mult_constant(loss_mono,1.0)
-	loss_cd=cost_nll(out_dnn2,lab_cd)
+	loss_cd=cost_nll(out_dnn3,lab_cd)
 	loss_final=sum(loss_cd,loss_mono_w)
-	err_final=cost_err(out_dnn2,lab_cd)
+	err_final=cost_err(out_dnn3,lab_cd)
 
 [forward]
-forward_out = out_dnn2
+forward_out = out_dnn3
 normalize_posteriors = True
 normalize_with_counts_from = lab_cd
 save_out_file = False
