--- a/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_LSTM_cudnn_fbank_combine.cfg
+++ b/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_LSTM_cudnn_fbank_combine.cfg
@@ -5,8 +5,8 @@ cfg_proto_chunk = proto/global_chunk.proto
 [exp]
 cmd =
 run_nn_script = run_nn
-out_folder = exp/LSTM_cudnn_combine_true_5000
-seed = 5000
+out_folder = exp/LSTM_cudnn_combine_false
+seed = 2234
 use_cuda = True
 multi_gpu = False
 save_gpumem = False
@@ -159,7 +159,7 @@ arch_seq_model = True
 hidden_size=512
 num_layers=4
 bias=True
-batch_first=True
+batch_first=False
 dropout=0.2
 bidirectional=True
 arch_lr = 0.0016
