--- a/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_LSTM_cudnn_fbank_combine_QMLP_false.cfg
+++ b/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_LSTM_cudnn_fbank_combine_QMLP_false.cfg
@@ -5,7 +5,7 @@ cfg_proto_chunk = proto/global_chunk.proto
 [exp]
 cmd =
 run_nn_script = run_nn
-out_folder = exp/LSTM_cudnn_combine_QMLP_64_relu_normt
+out_folder = exp/LSTM_cudnn_combine_QMLP_64_leaky
 seed = 2234
 use_cuda = True
 multi_gpu = False
@@ -158,13 +158,13 @@ arch_freeze = False
 arch_seq_model = True
 dnn_lay = 64
 dnn_drop = 0
-dnn_act = relu
+dnn_act = leaky_relu
 quaternion_init = quaternion
 autograd = False
 proj_layer = False
 proj_dim = 0
 proj_norm = False
-quaternion_norm = True
+quaternion_norm = False
 arch_lr = 0.0016
 arch_halving_factor = 0.5
 arch_improvement_threshold = 0.001
