--- a/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_LSTM_cudnn_fbank_combine_QMLP_leaky.cfg
+++ b/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_LSTM_cudnn_fbank_combine_QMLP_leaky.cfg
@@ -5,8 +5,8 @@ cfg_proto_chunk = proto/global_chunk.proto
 [exp]
 cmd =
 run_nn_script = run_nn
-out_folder = exp/LSTM_cudnn_combine_QMLP_512leaky_3500
-seed = 3500
+out_folder = exp/LSTM_cudnn_combine_QMLP_64_leaky_normt
+seed = 2234
 use_cuda = True
 multi_gpu = False
 save_gpumem = False
@@ -156,7 +156,7 @@ arch_class = QMLP
 arch_pretrain_file = none
 arch_freeze = False
 arch_seq_model = True
-dnn_lay = 512
+dnn_lay = 64
 dnn_drop = 0.0
 dnn_act = leaky_relu
 quaternion_init = quaternion
@@ -164,7 +164,7 @@ autograd = False
 proj_layer = False
 proj_dim = 0
 proj_norm = False
-quaternion_norm = False
+quaternion_norm = True
 arch_lr = 0.0016
 arch_halving_factor = 0.5
 arch_improvement_threshold = 0.001
