--- a/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_LSTM_cudnn_fbank_combine_extra.cfg
+++ b/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_LSTM_cudnn_fbank_combine_extra.cfg
@@ -5,8 +5,8 @@ cfg_proto_chunk = proto/global_chunk.proto
 [exp]
 cmd =
 run_nn_script = run_nn
-out_folder = exp/LSTM_cudnn_combine_extra_relu_512_5000
-seed = 5000
+out_folder = exp/LSTM_cudnn_combine_extra_64_leaky_4600
+seed = 4600
 use_cuda = True
 multi_gpu = False
 save_gpumem = False
@@ -156,13 +156,13 @@ arch_class = MLP
 arch_pretrain_file = none
 arch_freeze = False
 arch_seq_model = False
-dnn_lay = 512
+dnn_lay = 64
 dnn_drop = 0.0
 dnn_use_laynorm_inp = False
 dnn_use_batchnorm_inp = False
 dnn_use_batchnorm = False
 dnn_use_laynorm = False
-dnn_act = relu
+dnn_act = leaky_relu
 arch_lr = 0.0016
 arch_halving_factor = 0.5
 arch_improvement_threshold = 0.001
