--- a/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_liGRUfusion_fbank_combine.cfg
+++ b/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_liGRUfusion_fbank_combine.cfg
@@ -3,10 +3,10 @@ cfg_proto = proto/global.proto
 cfg_proto_chunk = proto/global_chunk.proto
 
 [exp]
-cmd =
+cmd = 
 run_nn_script = run_nn
-out_folder = exp/LSTM_cudnn_combine_QMLP_64_relu_normt
-seed = 2234
+out_folder = exp/TIMIT_liGRUfusion_combine
+seed = 1234
 use_cuda = True
 multi_gpu = False
 save_gpumem = False
@@ -141,31 +141,31 @@ forward_with = TIMIT_test
 
 [batches]
 batch_size_train = 8
-max_seq_length_train = 500
+max_seq_length_train = 1000
 increase_seq_length_train = True
 start_seq_len_train = 100
 multply_factor_seq_len_train = 2
 batch_size_valid = 8
-max_seq_length_valid = 500
+max_seq_length_valid = 1000
 
 [architecture1]
-arch_name = QMLP_layers
-arch_proto = proto/QMLP.proto
+arch_name = liGRU_layers
+arch_proto = proto/liGRUfusion.proto
 arch_library = q_neural_networks
-arch_class = QMLP
+arch_class = liGRUfusion
 arch_pretrain_file = none
 arch_freeze = False
 arch_seq_model = True
-dnn_lay = 64
-dnn_drop = 0
-dnn_act = relu
-quaternion_init = quaternion
-autograd = False
-proj_layer = False
-proj_dim = 0
-proj_norm = False
-quaternion_norm = True
-arch_lr = 0.0016
+ligru_lay = 550,550,550,550,550
+ligru_drop = 0.2,0.2,0.2,0.2,0.2
+ligru_use_laynorm_inp = False
+ligru_use_batchnorm_inp = False
+ligru_use_laynorm = False,False,False,False,False
+ligru_use_batchnorm = True,True,True,True,True
+ligru_bidir = True
+ligru_act = relu,relu,relu,relu,relu
+ligru_orthinit = True
+arch_lr = 0.0004
 arch_halving_factor = 0.5
 arch_improvement_threshold = 0.001
 arch_opt = rmsprop
@@ -176,31 +176,7 @@ opt_centered = False
 opt_weight_decay = 0.0
 
 [architecture2]
-arch_name = LSTM_cudnn_layers
-arch_proto = proto/LSTM_cudnn.proto
-arch_library = neural_networks
-arch_class = LSTM_cudnn
-arch_pretrain_file = none
-arch_freeze = False
-arch_seq_model = True
-hidden_size=512
-num_layers=4
-bias=True
-batch_first=True
-dropout=0.2
-bidirectional=True
-arch_lr = 0.0016
-arch_halving_factor = 0.5
-arch_improvement_threshold = 0.001
-arch_opt = rmsprop
-opt_momentum = 0.0
-opt_alpha = 0.95
-opt_eps = 1e-8
-opt_centered = False
-opt_weight_decay = 0.0
-
-[architecture3]
-arch_name = MLP_layers2
+arch_name = MLP_layers
 arch_proto = proto/MLP.proto
 arch_library = neural_networks
 arch_class = MLP
@@ -214,7 +190,7 @@ dnn_use_batchnorm_inp = False
 dnn_use_batchnorm = False
 dnn_use_laynorm = False
 dnn_act = softmax
-arch_lr = 0.0016
+arch_lr = 0.0004
 arch_halving_factor = 0.5
 arch_improvement_threshold = 0.001
 arch_opt = rmsprop
@@ -224,8 +200,8 @@ opt_eps = 1e-8
 opt_centered = False
 opt_weight_decay = 0.0
 
-[architecture4]
-arch_name = MLP_layers3
+[architecture3]
+arch_name = MLP_layers2
 arch_proto = proto/MLP.proto
 arch_library = neural_networks
 arch_class = MLP
@@ -251,22 +227,20 @@ opt_weight_decay = 0.0
 
 [model]
 model_proto = proto/model.proto
-
 model = conc1=concatenate(la2,la3)
 	conc2=concatenate(conc1,la4)
 	conc3=concatenate(conc2,la5)
-	out_dnn1=compute(QMLP_layers,conc3)
-	out_dnn2=compute(LSTM_cudnn_layers,out_dnn1)
-	out_dnn3=compute(MLP_layers2,out_dnn2)
-	out_dnn4=compute(MLP_layers3,out_dnn2)
-	loss_mono=cost_nll(out_dnn4,lab_mono)
+	out_dnn1=compute(liGRU_layers,conc3)
+	out_dnn2=compute(MLP_layers,out_dnn1)
+	out_dnn3=compute(MLP_layers2,out_dnn1)
+	loss_mono=cost_nll(out_dnn3,lab_mono)
 	loss_mono_w=mult_constant(loss_mono,1.0)
-	loss_cd=cost_nll(out_dnn3,lab_cd)
+	loss_cd=cost_nll(out_dnn2,lab_cd)
 	loss_final=sum(loss_cd,loss_mono_w)
-	err_final=cost_err(out_dnn3,lab_cd)
+	err_final=cost_err(out_dnn2,lab_cd)
 
 [forward]
-forward_out = out_dnn3
+forward_out = out_dnn2
 normalize_posteriors = True
 normalize_with_counts_from = lab_cd
 save_out_file = False
@@ -287,3 +261,4 @@ skip_scoring = false
 scoring_script = local/score.sh
 scoring_opts = "--min-lmwt 1 --max-lmwt 10"
 norm_vars = False
+
