--- a/Kaldi_baseline/cfg/TIMIT_baselines/dnn4_alignment/TIMIT_LSTM_cudnn_fbank_combine_QMLP_2.cfg
+++ b/Kaldi_baseline/cfg/TIMIT_baselines/dnn4_alignment/TIMIT_LSTM_cudnn_fbank_combine_QMLP_2.cfg
@@ -5,8 +5,8 @@ cfg_proto_chunk = proto/global_chunk.proto
 [exp]
 cmd =
 run_nn_script = run_nn
-out_folder = exp/LSTM_cudnn_combine_extra_leakyrelu_256_5000
-seed = 5000
+out_folder = exp/LSTM_dnn_combine_QMLP_256_leaky_4500
+seed = 4500
 use_cuda = True
 multi_gpu = False
 save_gpumem = False
@@ -39,14 +39,14 @@ fea = fea_name=la2
         cw_right=0
 
 lab = lab_name=lab_cd
-        lab_folder=/opt/kaldi/egs/timit/s5/exp/tri3_ali
+        lab_folder=/opt/kaldi/egs/timit/s5/exp/dnn4_pretrain-dbn_dnn_ali
         lab_opts=ali-to-pdf
         lab_count_file=auto
         lab_data_folder=/opt/kaldi/egs/timit/s5/data/train/
         lab_graph=/opt/kaldi/egs/timit/s5/exp/tri3/graph
 
         lab_name=lab_mono
-        lab_folder=/opt/kaldi/egs/timit/s5/exp/tri3_ali
+        lab_folder=/opt/kaldi/egs/timit/s5/exp/dnn4_pretrain-dbn_dnn_ali
         lab_opts=ali-to-phones --per-frame=true
         lab_count_file=none
         lab_data_folder=/opt/kaldi/egs/timit/s5/data/train/
@@ -79,14 +79,14 @@ fea = fea_name=la2
         cw_right=0
 
 lab = lab_name=lab_cd
-        lab_folder=/opt/kaldi/egs/timit/s5/exp/tri3_ali_dev
+        lab_folder=/opt/kaldi/egs/timit/s5/exp/dnn4_pretrain-dbn_dnn_ali_dev
         lab_opts=ali-to-pdf
         lab_count_file=auto
         lab_data_folder=/opt/kaldi/egs/timit/s5/data/dev/
         lab_graph=/opt/kaldi/egs/timit/s5/exp/tri3/graph
 
         lab_name=lab_mono
-        lab_folder=/opt/kaldi/egs/timit/s5/exp/tri3_ali_dev
+        lab_folder=/opt/kaldi/egs/timit/s5/exp/dnn4_pretrain-dbn_dnn_ali_dev
         lab_opts=ali-to-phones --per-frame=true
         lab_count_file=none
         lab_data_folder=/opt/kaldi/egs/timit/s5/data/dev/
@@ -120,14 +120,14 @@ fea = fea_name=la2
         cw_right=0
 
 lab = lab_name=lab_cd
-        lab_folder=/opt/kaldi/egs/timit/s5/exp/tri3_ali_test
+        lab_folder=/opt/kaldi/egs/timit/s5/exp/dnn4_pretrain-dbn_dnn_ali_test
         lab_opts=ali-to-pdf
         lab_count_file=auto
         lab_data_folder=/opt/kaldi/egs/timit/s5/data/test/
         lab_graph=/opt/kaldi/egs/timit/s5/exp/tri3/graph
 
         lab_name=lab_mono
-        lab_folder=/opt/kaldi/egs/timit/s5/exp/tri3_ali_test
+        lab_folder=/opt/kaldi/egs/timit/s5/exp/dnn4_pretrain-dbn_dnn_ali_test
         lab_opts=ali-to-phones --per-frame=true
         lab_count_file=none
         lab_data_folder=/opt/kaldi/egs/timit/s5/data/test/
@@ -149,20 +149,22 @@ batch_size_valid = 8
 max_seq_length_valid = 500
 
 [architecture1]
-arch_name = MLP_layers
-arch_proto = proto/MLP.proto
-arch_library = neural_networks
-arch_class = MLP
+arch_name = QMLP_layers
+arch_proto = proto/QMLP.proto
+arch_library = q_neural_networks
+arch_class = QMLP
 arch_pretrain_file = none
 arch_freeze = False
-arch_seq_model = False
+arch_seq_model = True
 dnn_lay = 256
-dnn_drop = 0.0
-dnn_use_laynorm_inp = False
-dnn_use_batchnorm_inp = False
-dnn_use_batchnorm = False
-dnn_use_laynorm = False
+dnn_drop = 0
 dnn_act = leaky_relu
+quaternion_init = quaternion
+autograd = False
+proj_layer = False
+proj_dim = 0
+proj_norm = False
+quaternion_norm = False
 arch_lr = 0.0016
 arch_halving_factor = 0.5
 arch_improvement_threshold = 0.001
@@ -253,7 +255,7 @@ model_proto = proto/model.proto
 model = conc1=concatenate(la2,la3)
 	conc2=concatenate(conc1,la4)
 	conc3=concatenate(conc2,la5)
-	out_dnn1=compute(MLP_layers,conc3)
+	out_dnn1=compute(QMLP_layers,conc3)
 	out_dnn2=compute(LSTM_cudnn_layers,out_dnn1)
 	out_dnn3=compute(MLP_layers2,out_dnn2)
 	out_dnn4=compute(MLP_layers3,out_dnn2)
