--- a/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_mfcc_fbank_fmllr_liGRU_best.cfg
+++ b/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_mfcc_fbank_fmllr_liGRU_best.cfg
@@ -155,20 +155,20 @@ opt_weight_decay = 0.0
 
 [architecture2]
 arch_name = liGRU_layers
-arch_proto = proto/liGRU.proto
-arch_library = neural_networks
-arch_class = liGRU
+arch_proto = proto/liGRUfusion.proto
+arch_library = q_neural_networks
+arch_class = liGRUfusion
 arch_pretrain_file = none
 arch_freeze = False
 arch_seq_model = True
-ligru_lay = 550,550,550,550,550
-ligru_drop = 0.2,0.2,0.2,0.2,0.2
+ligru_lay = 256
+ligru_drop = 0.2
 ligru_use_laynorm_inp = False
 ligru_use_batchnorm_inp = False
-ligru_use_laynorm = False,False,False,False,False
-ligru_use_batchnorm = True,True,True,True,True
+ligru_use_laynorm = False
+ligru_use_batchnorm = True
 ligru_bidir = True
-ligru_act = relu,relu,relu,relu,relu
+ligru_act = relu
 ligru_orthinit = True
 arch_lr = 0.0004
 arch_halving_factor = 0.5
