--- a/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_liGRUfusion_fbank_combine.cfg
+++ b/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_liGRUfusion_fbank_combine.cfg
@@ -5,7 +5,7 @@ cfg_proto_chunk = proto/global_chunk.proto
 [exp]
 cmd = 
 run_nn_script = run_nn
-out_folder = exp/TIMIT_liGRUfusion_combine
+out_folder = exp/TIMIT_liGRUfusion_combine_256_5
 seed = 2234
 use_cuda = True
 multi_gpu = False
@@ -156,14 +156,14 @@ arch_class = liGRUfusion
 arch_pretrain_file = none
 arch_freeze = False
 arch_seq_model = True
-ligru_lay = 256,256,256,256
-ligru_drop = 0.2,0.2,0.2,0.2
+ligru_lay = 256,256,256,256,256
+ligru_drop = 0.2,0.2,0.2,0.2,0.2
 ligru_use_laynorm_inp = False
 ligru_use_batchnorm_inp = False
-ligru_use_laynorm = False,False,False,False
-ligru_use_batchnorm = True,True,True,True
+ligru_use_laynorm = False,False,False,False,False
+ligru_use_batchnorm = True,True,True,True,True
 ligru_bidir = True
-ligru_act = relu,relu,relu,relu
+ligru_act = relu,relu,relu,relu,relu
 ligru_orthinit = True
 arch_lr = 0.0004
 arch_halving_factor = 0.5
