--- a/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_liGRUfusion_fbank_combine_400.cfg
+++ b/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_liGRUfusion_fbank_combine_400.cfg
@@ -3,9 +3,9 @@ cfg_proto = proto/global.proto
 cfg_proto_chunk = proto/global_chunk.proto
 
 [exp]
-cmd =
+cmd = 
 run_nn_script = run_nn
-out_folder = exp/LSTM_combine_2234
+out_folder = exp/TIMIT_liGRUfusion_combine_400_5
 seed = 2234
 use_cuda = True
 multi_gpu = False
@@ -141,31 +141,31 @@ forward_with = TIMIT_test
 
 [batches]
 batch_size_train = 8
-max_seq_length_train = 500
+max_seq_length_train = 1000
 increase_seq_length_train = True
 start_seq_len_train = 100
 multply_factor_seq_len_train = 2
 batch_size_valid = 8
-max_seq_length_valid = 500
+max_seq_length_valid = 1000
 
 [architecture1]
-arch_name = LSTM_cudnn_layers
-arch_proto = proto/LSTM.proto
-arch_library = neural_networks
-arch_class = LSTM
+arch_name = liGRU_layers
+arch_proto = proto/liGRUfusion.proto
+arch_library = q_neural_networks
+arch_class = liGRUfusion
 arch_pretrain_file = none
 arch_freeze = False
 arch_seq_model = True
-lstm_lay = 290,290,290,290
-lstm_drop = 0,0,0,0
-lstm_use_laynorm_inp = False
-lstm_use_batchnorm_inp = False
-lstm_use_laynorm = False,False,False,False
-lstm_use_batchnorm = False,False,False,False
-lstm_bidir = True
-lstm_act = tanh,tanh,tanh,tanh
-lstm_orthinit = True
-arch_lr = 0.0016
+ligru_lay = 400,400,400,400,400
+ligru_drop = 0.2,0.2,0.2,0.2,0.2
+ligru_use_laynorm_inp = False
+ligru_use_batchnorm_inp = False
+ligru_use_laynorm = False,False,False,False,False
+ligru_use_batchnorm = True,True,True,True,True
+ligru_bidir = True
+ligru_act = relu,relu,relu,relu,relu
+ligru_orthinit = True
+arch_lr = 0.0004
 arch_halving_factor = 0.5
 arch_improvement_threshold = 0.001
 arch_opt = rmsprop
@@ -190,7 +190,7 @@ dnn_use_batchnorm_inp = False
 dnn_use_batchnorm = False
 dnn_use_laynorm = False
 dnn_act = softmax
-arch_lr = 0.0016
+arch_lr = 0.0004
 arch_halving_factor = 0.5
 arch_improvement_threshold = 0.001
 arch_opt = rmsprop
@@ -227,11 +227,10 @@ opt_weight_decay = 0.0
 
 [model]
 model_proto = proto/model.proto
-
 model = conc1=concatenate(la2,la3)
 	conc2=concatenate(conc1,la4)
 	conc3=concatenate(conc2,la5)
-	out_dnn1=compute(LSTM_cudnn_layers,conc3)
+	out_dnn1=compute(liGRU_layers,conc3)
 	out_dnn2=compute(MLP_layers,out_dnn1)
 	out_dnn3=compute(MLP_layers2,out_dnn1)
 	loss_mono=cost_nll(out_dnn3,lab_mono)
@@ -262,3 +261,4 @@ skip_scoring = false
 scoring_script = local/score.sh
 scoring_opts = "--min-lmwt 1 --max-lmwt 10"
 norm_vars = False
+
