add single QLSTM

--- a/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_QLSTM_fbank_singlecopy.cfg
+++ b/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_QLSTM_fbank_singlecopy.cfg
@@ -3,10 +3,10 @@ cfg_proto = proto/global.proto
 cfg_proto_chunk = proto/global_chunk.proto
 
 [exp]
-cmd = 
+cmd =
 run_nn_script = run_nn
-out_folder = exp/TIMIT_liGRUfusion_combine_245_5
-seed = 3500
+out_folder = exp/QLSTM_singlecopy_4500
+seed = 4500
 use_cuda = True
 multi_gpu = False
 save_gpumem = False
@@ -15,14 +15,14 @@ n_epochs_tr = 24
 [dataset1]
 data_name = TIMIT_tr
 fea = fea_name=la2
-        fea_lst=/opt/kaldi/egs/timit/s5_la2/data/train/feats.scp
-        fea_opts=apply-cmvn --utt2spk=ark:/opt/kaldi/egs/timit/s5_la2/data/train/utt2spk  ark:/opt/kaldi/egs/timit/s5_la2/fbank/cmvn_train.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
+        fea_lst=/opt/kaldi/egs/timit/s5_la4/data/train/feats.scp
+        fea_opts=apply-cmvn --utt2spk=ark:/opt/kaldi/egs/timit/s5_la4/data/train/utt2spk  ark:/opt/kaldi/egs/timit/s5_la4/fbank/cmvn_train.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
         cw_left=0
         cw_right=0
 
         fea_name=la3
-        fea_lst=/opt/kaldi/egs/timit/s5_la3/data/train/feats.scp
-        fea_opts=apply-cmvn --utt2spk=ark:/opt/kaldi/egs/timit/s5_la3/data/train/utt2spk  ark:/opt/kaldi/egs/timit/s5_la3/fbank/cmvn_train.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
+        fea_lst=/opt/kaldi/egs/timit/s5_la4/data/train/feats.scp
+        fea_opts=apply-cmvn --utt2spk=ark:/opt/kaldi/egs/timit/s5_la4/data/train/utt2spk  ark:/opt/kaldi/egs/timit/s5_la4/fbank/cmvn_train.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
         cw_left=0
         cw_right=0
 
@@ -33,8 +33,8 @@ fea = fea_name=la2
         cw_right=0
 
         fea_name=la5
-        fea_lst=/opt/kaldi/egs/timit/s5_la5/data/train/feats.scp
-        fea_opts=apply-cmvn --utt2spk=ark:/opt/kaldi/egs/timit/s5_la5/data/train/utt2spk  ark:/opt/kaldi/egs/timit/s5_la5/fbank/cmvn_train.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
+        fea_lst=/opt/kaldi/egs/timit/s5_la4/data/train/feats.scp
+        fea_opts=apply-cmvn --utt2spk=ark:/opt/kaldi/egs/timit/s5_la4/data/train/utt2spk  ark:/opt/kaldi/egs/timit/s5_la4/fbank/cmvn_train.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
         cw_left=0
         cw_right=0
 
@@ -55,14 +55,14 @@ n_chunks = 5
 [dataset2]
 data_name = TIMIT_dev
 fea = fea_name=la2
-        fea_lst=/opt/kaldi/egs/timit/s5_la2/data/dev/feats.scp
-        fea_opts=apply-cmvn --utt2spk=ark:/opt/kaldi/egs/timit/s5_la2/data/dev/utt2spk  ark:/opt/kaldi/egs/timit/s5_la2/fbank/cmvn_dev.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
+        fea_lst=/opt/kaldi/egs/timit/s5_la4/data/dev/feats.scp
+        fea_opts=apply-cmvn --utt2spk=ark:/opt/kaldi/egs/timit/s5_la4/data/dev/utt2spk  ark:/opt/kaldi/egs/timit/s5_la4/fbank/cmvn_dev.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
         cw_left=0
         cw_right=0
 
         fea_name=la3
-        fea_lst=/opt/kaldi/egs/timit/s5_la3/data/dev/feats.scp
-        fea_opts=apply-cmvn --utt2spk=ark:/opt/kaldi/egs/timit/s5_la3/data/dev/utt2spk  ark:/opt/kaldi/egs/timit/s5_la3/fbank/cmvn_dev.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
+        fea_lst=/opt/kaldi/egs/timit/s5_la4/data/dev/feats.scp
+        fea_opts=apply-cmvn --utt2spk=ark:/opt/kaldi/egs/timit/s5_la4/data/dev/utt2spk  ark:/opt/kaldi/egs/timit/s5_la4/fbank/cmvn_dev.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
         cw_left=0
         cw_right=0
 
@@ -73,8 +73,8 @@ fea = fea_name=la2
         cw_right=0
 
         fea_name=la5
-        fea_lst=/opt/kaldi/egs/timit/s5_la5/data/dev/feats.scp
-        fea_opts=apply-cmvn --utt2spk=ark:/opt/kaldi/egs/timit/s5_la5/data/dev/utt2spk  ark:/opt/kaldi/egs/timit/s5_la5/fbank/cmvn_dev.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
+        fea_lst=/opt/kaldi/egs/timit/s5_la4/data/dev/feats.scp
+        fea_opts=apply-cmvn --utt2spk=ark:/opt/kaldi/egs/timit/s5_la4/data/dev/utt2spk  ark:/opt/kaldi/egs/timit/s5_la4/fbank/cmvn_dev.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
         cw_left=0
         cw_right=0
 
@@ -96,14 +96,14 @@ n_chunks = 1
 [dataset3]
 data_name = TIMIT_test
 fea = fea_name=la2
-        fea_lst=/opt/kaldi/egs/timit/s5_la2/data/test/feats.scp
-        fea_opts=apply-cmvn --utt2spk=ark:/opt/kaldi/egs/timit/s5_la2/data/test/utt2spk  ark:/opt/kaldi/egs/timit/s5_la2/fbank/cmvn_test.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
+        fea_lst=/opt/kaldi/egs/timit/s5_la4/data/test/feats.scp
+        fea_opts=apply-cmvn --utt2spk=ark:/opt/kaldi/egs/timit/s5_la4/data/test/utt2spk  ark:/opt/kaldi/egs/timit/s5_la4/fbank/cmvn_test.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
         cw_left=0
         cw_right=0
 
         fea_name=la3
-        fea_lst=/opt/kaldi/egs/timit/s5_la3/data/test/feats.scp
-        fea_opts=apply-cmvn --utt2spk=ark:/opt/kaldi/egs/timit/s5_la3/data/test/utt2spk  ark:/opt/kaldi/egs/timit/s5_la2/fbank/cmvn_test.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
+        fea_lst=/opt/kaldi/egs/timit/s5_la4/data/test/feats.scp
+        fea_opts=apply-cmvn --utt2spk=ark:/opt/kaldi/egs/timit/s5_la4/data/test/utt2spk  ark:/opt/kaldi/egs/timit/s5_la4/fbank/cmvn_test.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
         cw_left=0
         cw_right=0
 
@@ -114,8 +114,8 @@ fea = fea_name=la2
         cw_right=0
 
         fea_name=la5
-        fea_lst=/opt/kaldi/egs/timit/s5_la5/data/test/feats.scp
-        fea_opts=apply-cmvn --utt2spk=ark:/opt/kaldi/egs/timit/s5_la5/data/test/utt2spk  ark:/opt/kaldi/egs/timit/s5_la5/fbank/cmvn_test.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
+        fea_lst=/opt/kaldi/egs/timit/s5_la4/data/test/feats.scp
+        fea_opts=apply-cmvn --utt2spk=ark:/opt/kaldi/egs/timit/s5_la4/data/test/utt2spk  ark:/opt/kaldi/egs/timit/s5_la4/fbank/cmvn_test.ark ark:- ark:- | add-deltas --delta-order=0 ark:- ark:- |
         cw_left=0
         cw_right=0
 
@@ -134,6 +134,7 @@ lab = lab_name=lab_cd
         lab_graph=/opt/kaldi/egs/timit/s5/exp/tri3/graph
 n_chunks = 1
 
+
 [data_use]
 train_with = TIMIT_tr
 valid_with = TIMIT_dev
@@ -141,32 +142,33 @@ forward_with = TIMIT_test
 
 [batches]
 batch_size_train = 8
-max_seq_length_train = 1000
+max_seq_length_train = 500
 increase_seq_length_train = True
 start_seq_len_train = 100
 multply_factor_seq_len_train = 2
 batch_size_valid = 8
-max_seq_length_valid = 1000
+max_seq_length_valid = 500
 
 [architecture1]
-arch_name = liGRU_layers
-arch_proto = proto/liGRUfusion.proto
+arch_name = QLSTM
+arch_proto = proto/QLSTM.proto
 arch_library = q_neural_networks
-arch_class = liGRUfusion
+arch_class = QLSTM
 arch_pretrain_file = none
 arch_freeze = False
 arch_seq_model = True
-ligru_lay = 245,245,245,245,245
-ligru_drop = 0,0,0,0,0
-ligru_use_laynorm_inp = False
-ligru_use_batchnorm_inp = False
-ligru_use_laynorm = False,False,False,False,False
-ligru_use_batchnorm = True,True,True,True,True
-ligru_use_quanternion = True,False,False,False,False
-ligru_bidir = True
-ligru_act = relu,relu,relu,relu,relu
-ligru_orthinit = True
-arch_lr = 0.0004
+lstm_lay = 512,512,512,512
+lstm_drop = 0.2,0.2,0.2,0.2
+lstm_bidir = True
+lstm_act = tanh,tanh,tanh,tanh
+quaternion_init=quaternion
+autograd=False
+proj_layer=False
+proj_dim=0
+proj_norm=False
+proj_act=0
+quaternion_norm=False
+arch_lr = 0.0016
 arch_halving_factor = 0.5
 arch_improvement_threshold = 0.001
 arch_opt = rmsprop
@@ -191,7 +193,7 @@ dnn_use_batchnorm_inp = False
 dnn_use_batchnorm = False
 dnn_use_laynorm = False
 dnn_act = softmax
-arch_lr = 0.0004
+arch_lr = 0.0016
 arch_halving_factor = 0.5
 arch_improvement_threshold = 0.001
 arch_opt = rmsprop
@@ -231,7 +233,7 @@ model_proto = proto/model.proto
 model = conc1=concatenate(la2,la3)
 	conc2=concatenate(conc1,la4)
 	conc3=concatenate(conc2,la5)
-	out_dnn1=compute(liGRU_layers,conc3)
+	out_dnn1=compute(QLSTM,conc3)
 	out_dnn2=compute(MLP_layers,out_dnn1)
 	out_dnn3=compute(MLP_layers2,out_dnn1)
 	loss_mono=cost_nll(out_dnn3,lab_mono)
@@ -262,4 +264,3 @@ skip_scoring = false
 scoring_script = local/score.sh
 scoring_opts = "--min-lmwt 1 --max-lmwt 10"
 norm_vars = False
-
