--- a/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_liGRU_fbank_combine.cfg
+++ b/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_liGRU_fbank_combine.cfg
@@ -5,7 +5,7 @@ cfg_proto_chunk = proto/global_chunk.proto
 [exp]
 cmd = 
 run_nn_script = run_nn
-out_folder = exp/TIMIT_liGRUfusion_combine_400_5
+out_folder = exp/TIMIT_liGRU_combine_245_5
 seed = 2234
 use_cuda = True
 multi_gpu = False
@@ -150,13 +150,13 @@ max_seq_length_valid = 1000
 
 [architecture1]
 arch_name = liGRU_layers
-arch_proto = proto/liGRUfusion.proto
-arch_library = q_neural_networks
-arch_class = liGRUfusion
+arch_proto = proto/liGRU.proto
+arch_library = neural_networks
+arch_class = liGRU
 arch_pretrain_file = none
 arch_freeze = False
 arch_seq_model = True
-ligru_lay = 400,400,400,400,400
+ligru_lay = 245,245,245,245,245
 ligru_drop = 0.2,0.2,0.2,0.2,0.2
 ligru_use_laynorm_inp = False
 ligru_use_batchnorm_inp = False
