--- a/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_LSTM_fbank_beam_1.cfg
+++ b/Kaldi_baseline/cfg/TIMIT_baselines/TIMIT_LSTM_fbank_beam_1.cfg
@@ -5,8 +5,8 @@ cfg_proto_chunk = proto/global_chunk.proto
 [exp]
 cmd = 
 run_nn_script = run_nn
-out_folder = exp/LSTM_beam_290
-seed = 2300
+out_folder = exp/LSTM_beam_290_3500
+seed = 3500
 use_cuda = True
 multi_gpu = False
 save_gpumem = False
